style: gap fix

--- a/assets/mp_style/ttbm_plugin_global.css
+++ b/assets/mp_style/ttbm_plugin_global.css
@@ -1570,11 +1570,11 @@
 }
 
 .ttbm_style .grid .ttbm_list_title {
-font-weight: normal;
+	font-weight: normal;
+	margin-top: 0;
 }
 
 .ttbm_style .grid .ttbm_list_info{
-
 	margin-top: 0;
 }
 @media only screen and (min-width: 10px) {
